<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg"
    android:id="@+id/tutorupcoming">

    <Button
        android:id="@+id/screen11_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/gg"
        android:text="@string/screen3_back"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/weekNavigation11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnPrevWeek11"
            android:backgroundTint="@color/gg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen10_btnPrevWeek" />

        <TextView
            android:id="@+id/tvWeekLabel11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/screen10_tvWeekLabel"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnNextWeek11"
            android:backgroundTint="@color/gg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen10_btnNextWeek" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearWeekdays11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/weekNavigation11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Each TextView represents a weekday -->
        <TextView
            android:id="@+id/textView111"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/screen10_sun" />

        <TextView android:text="@string/screen10_mon" android:layout_weight="1" android:gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <TextView android:text="@string/screen10_tue" android:layout_weight="1" android:gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <TextView android:text="@string/screen10_wed" android:layout_weight="1" android:gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <TextView android:text="@string/screen10_thu" android:layout_weight="1" android:gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <TextView android:text="@string/screen10_fri" android:layout_weight="1" android:gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <TextView android:text="@string/screen10_sat" android:layout_weight="1" android:gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
    </LinearLayout>

    <!-- RecyclerView for the time slots grid -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSlots11"
        android:layout_width="365dp"
        android:layout_height="684dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearWeekdays11"
        app:layout_constraintVertical_bias="0.9" />

    <LinearLayout
        android:layout_width="41dp"
        android:layout_height="690dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView112"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView2" />

        <TextView
            android:id="@+id/textView113"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView3" />

        <TextView
            android:id="@+id/textView114"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView4" />

        <TextView
            android:id="@+id/textView115"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView5" />

        <TextView
            android:id="@+id/textView116"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView6" />

        <TextView
            android:id="@+id/textView117"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView7" />

        <TextView
            android:id="@+id/textView118"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView8" />

        <TextView
            android:id="@+id/textView119"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView9" />

        <TextView
            android:id="@+id/textView1110"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView10" />

        <TextView
            android:id="@+id/textView1111"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView11" />

        <TextView
            android:id="@+id/textView1112"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView12" />

        <TextView
            android:id="@+id/textView1113"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/screen10_textView13" />

        <TextView
            android:id="@+id/textView1114"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/screen10_textView14" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/screen11_psessionsr"
        android:layout_width="243dp"
        android:layout_height="69dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/gg"
        android:fontFamily="sans-serif-medium"
        android:text="@string/screen11_psessionsr"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/approve_bookings"
        app:iconSize="38dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

</androidx.constraintlayout.widget.ConstraintLayout>