<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/screen1_title"
        android:textColor="@color/black"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <EditText
        android:id="@+id/screen1_email"
        android:layout_width="280dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/gg"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/screen1_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:autofillHints="emailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <EditText
        android:id="@+id/screen1_password"
        android:layout_width="280dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/gg"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/screen1_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:autofillHints="password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <Button
        android:id="@+id/screen1_signUp"
        android:layout_width="300dp"
        android:layout_height="66dp"
        android:layout_weight="1"
        android:backgroundTint="@color/gg"
        android:fontFamily="sans-serif-medium"
        android:text="@string/screen1_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <Button
        android:id="@+id/screen1_register"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:text="@string/screen1_register"
        android:textColor="@color/gg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

</androidx.constraintlayout.widget.ConstraintLayout>