<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg">

    <TextView
        android:id="@+id/screen3_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/screen3_header"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/screen3_student"
        android:layout_width="175dp"
        android:layout_height="400dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/gg"
        android:fontFamily="sans-serif-medium"
        android:text="@string/screen3_student"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/screen3_tutor"
        android:layout_width="175dp"
        android:layout_height="400dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/gg"
        android:fontFamily="sans-serif-medium"
        android:text="@string/screen3_tutor"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

</androidx.constraintlayout.widget.ConstraintLayout>